--- a/www/index.html
+++ b/www/index.html
@@ -16,11 +16,11 @@
     <meta name="twitter:description" content="Brandon Valosek is a software engineer currently living in Austin, Texas">
     <meta name="twitter:site" content="@bvalosek">
     <meta name="twitter:creator" content="@bvalosek">
-    <meta name="twitter:image:src" content="https://bvalosek.com/images/me.jpg">
+    <meta name="twitter:image" content="https://bvalosek.com/images/me.jpg">
 
     <meta name="og:title" content="Brandon Valosek">
     <meta name="og:description" content="Brandon Valosek is a software engineer currently living in Austin, Texas">
-    <meta name="og:image" content="https://bvalosek.com/images/me/jpg">
+    <meta name="og:image" content="https://bvalosek.com/images/me.jpg">
     <meta name="og:url" content="https://bvalosek.com">
     <meta name="og:site_name" content="Brandon Valosek">
     <meta name="og:type" content="website">
